--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["src"],
+  "include": ["src", "javascript-generic-zoom"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
