--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generic-zoom",
-  "version": "1.0.1",
-  "description": "Medium zoom like functionality, but only transforming the container element. Suited for children that adjust automatically depending on the parent element width - such as gatsby-image. (Note that for use with react, use the generic-medium-zoom-react package",
+  "version": "1.1.0",
+  "description": "Medium zoom like functionality, but working by simply transforming the element.  Suited for children that adjust automatically depending on the parent element width - such as gatsby-image. (Note that for use with react, use the generic-medium-zoom-react package",
   "main": "lib/index.js",
   "module": "lib/index.es.js",
   "jsnext:main": "lib/index.es.js",
